Trim whitespace from cells when importing a CSV

BUG: 437810
FIXED-IN: 5.1.2